--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
 <p>This is edit in the master branch</p>
+  <p>This is the change from remote</p>  
 </body>
 </html>
