--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
 <p>This is edit in the master branch</p>
+<p>added third line<p>
    
 </body>
 </html>
