--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 <title>Hello World!</title>
 <link rel="stylesheet" href="stylesheet.css">
 </head>
-<body>
 
+<body>
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
 <p>This is change made in subbranch</p>
+<p>on github added a branch</p>
 </body>
+
 </html>
